--- a/src/pages/Movies/Movies.css
+++ b/src/pages/Movies/Movies.css
@@ -35,7 +35,7 @@
 }
 
 .movie-box {
-    min-height: 300px;
+    min-height: 450px;
     width: 15%;
     margin-bottom: 10px;
     border: 1px solid;
@@ -53,6 +53,7 @@
     font-family: sans-serif;
     color: #174467;
     margin-top: 5px;
+    min-height: 100px;
 }
 
 .movie-category {
@@ -95,7 +96,7 @@
 
 .movie-detail-page .movie-box {
     height: auto;
-    width: 25%;
+    width: 300px;
     float: left;
 }
 
@@ -104,7 +105,11 @@
     border: 1px solid;
     padding: 20px;
     margin: 20px;
-    width: 60%;
+    width: 65%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 
@@ -125,7 +130,7 @@
 .react-datepicker-wrapper {
     float: left;
     margin: 10px;
-    width: 175px;
+    width: 200px;
 }
 
 .seat-display {
@@ -153,4 +158,8 @@
 
 .checkout-seat button {
     float: right !important;
+}
+
+.width20 {
+    width: 200px;
 }
